--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,21 @@
 [tool.poetry]
-name = "sim-envs"
+name = "simenvs"
 version = "0.1.0"
 description = ""
 authors = ["Aidan Scannell <scannell.aidan@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-numpy = "tensorflow"
-tensorflow = "^2.3.1"
 matplotlib = "^3.3.3"
+numpy = "^1.19.2"
+tf-agents = "^0.6.0"
+tensorflow = "^2.4"
+jax = "^0.2.7"
+jaxlib = "^0.1.57"
+dm-env = "^1.3"
+gym = "^0.17.3"
+dm-haiku = "^0.0.3"
+opencv-python = "^4.5.1"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
@@ -16,6 +23,7 @@ isort = "^5.6.4"
 pyflakes = "^2.2.0"
 # Sphinx = "^3.3.1"
 # sphinx-rtd-theme = "^0.5.0"
+ipython = "^7.19.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
