--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dm-env = "^1.3"
 gym = "^0.17.3"
 dm-haiku = "^0.0.3"
 opencv-python = "^4.5.1"
+bunch = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
