--- a/scenario-1/configs/env_config.toml
+++ b/scenario-1/configs/env_config.toml
@@ -1,4 +1,5 @@
 gating_bitmap = "./bitmaps/gating_mask.bmp"  # filename for gating bitmap
+# gating_bitmap = "./scenario-1/bitmaps/gating_mask.bmp"  # filename for gating bitmap
 # gating_bitmap = "../scenario-1/gating_mask.bmp"  # filename for gating bitmap
 
 # lists are converted to 1D np.arrays and floats/ints are broadcast
