Added gin for configuring experiments

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ gpflow = "^2.2.1"
 tensorflow = "^2.4.0"
 matplotlib = "^3.2.1"
 SciencePlots = "^1.0.8"
+gin = "^0.1.6"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
