--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ tensorflow = "^2.4.0"
 matplotlib = "^3.2.1"
 SciencePlots = "^1.0.8"
 gin = "^0.1.6"
+geoflow = {path = "../geoflow", develop=true}  # https://github.com/aidanscannell/geoflow
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
