--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,18 +6,27 @@ authors = ["Aidan Scannell <scannell.aidan@gmail.com>"]
 
 [tool.poetry.dependencies]
 # python = ">=3.6,<3.10"  
-python = "^3.6"  
-matplotlib = "^3.3.3"
+# python = "^3.6"  
+python = "^3.8"
+matplotlib = "^3.2"
 numpy = "^1.19.2"
-tf-agents = "^0.6.0"
-tensorflow = "^2.4"
-jax = "^0.2.7"
+# tf-agents = "^0.6.0"
+# tensorflow = "^2.4"
+# jax = "^0.2.7"
+jax = "0.2.11" # hack until tensorflow-probability fixes custom_transforms error
 jaxlib = "^0.1.57"
 dm-env = "^1.3"
-gym = "^0.17.3"
+gym = "^0.17.2"
 # dm-haiku = "^0.0.3"
 opencv-python = "^4.5.1"
 bunch = "^1.0.1"
+jupyter = "^1.0.0"
+# gpjax = {path = "../GPJax", develop=true}
+# mogpjaxe = {path = "../MoGPJaxE", develop=true}
+tensorflow = "^2.5.0"
+tf-agents = "^0.8.0"
+imageio = "^2.8.0"
+imageio-ffmpeg = "^0.4.2"
 
 [tool.poetry.dev-dependencies]
 black = "^20.8b1"
