--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 *~
-*/__pycache__/*
-__pycache__/*
+__pycache__
 .envrc
+.DS_Store
+.auctex-auto
+.ipynb_checkpoints
+Pipfile
+Pipfile.lock
 superseded
