--- a/simenvs/velocity_controlled_point_mass/scenario-5/env_config.toml
+++ b/simenvs/velocity_controlled_point_mass/scenario-5/env_config.toml
@@ -18,16 +18,17 @@ max_acceleration = [10.0, 10.0]
 
 # environment parameters
 low_process_noise_var = [0.0001, 0.0002]
-high_process_noise_var = [0.01, 0.04]
-low_process_noise_mean = [0.1, 0.02]
-high_process_noise_mean = [0.1, -0.4]
+high_process_noise_var = [0.05, 0.2]
+low_process_noise_mean = [0.4, 0.02]
+high_process_noise_mean = [0.4, -2.0]
 # low_process_noise_var = [0.0, 0.0]
 # high_process_noise_var = [0.01, 0.04]
 # low_process_noise_mean = [0.1, 0.05]
 # high_process_noise_mean = [0.1, -0.4]
 
 # simulator parameters
-delta_time = 0.05
+delta_time = 0.25
+# delta_time = 0.05
 # delta_time = 0.5
 # velocity_init = 0.0
 # constant_error = [0.5, 0.1]
