--- a/examples/velocity_controlled_point_mass/scenario_5/configs/subset_mogpe_config.toml
+++ b/examples/velocity_controlled_point_mass/scenario_5/configs/subset_mogpe_config.toml
@@ -12,7 +12,6 @@ bound = "further_gating" # which ELBO to use, either "tight" or "further", defau
         name = "zero" # mean function e.g. options are "constant" or "zero"
         # name = "constant" # mean function e.g. options are "constant" or "zero"
         # [experts.mean_function.params] # set required parameters for the kernel type
-        #     # constant = [0.1, -0.4] # constant value
         #     constant = [0.0, 0.0] # constant value
     [experts.kernel]
         name = "rbf" # kernel type e.g. "rbf", "cosine", "sum", "product"
@@ -44,7 +43,6 @@ bound = "further_gating" # which ELBO to use, either "tight" or "further", defau
         name = "zero" # mean function e.g. options are "constant" or "zero"
         # name = "constant" # mean function e.g. options are "constant" or "zero"
         # [experts.mean_function.params] # set required parameters for the kernel type
-        #     # constant = [0.05, 0.02] # constant value
         #     constant = [0.0, 0.0] # constant value
     [experts.kernel]
         name = "rbf" # kernel type e.g. "rbf", "cosine", "sum", "product"
@@ -84,7 +82,7 @@ bound = "further_gating" # which ELBO to use, either "tight" or "further", defau
         # inputs_trainable = false
         inputs_trainable = true
         num_inducing = 90
-        # q_mu.mean = 0.0 # mean of variational Gaussian posterior, will be broadcast to correct shape
-        # q_mu.var = 2.0 # add Gaussian noise to mean of variational Gaussian posterior to aid training N(0,q_mu.var)
-        # q_sqrt = 2.0 # cholesky of covariance of variational Gaussian posterior, will be multiplied by identity of correct shape
+        q_mu.mean = 0.0 # mean of variational Gaussian posterior, will be broadcast to correct shape
+        q_mu.var = 2.0 # add Gaussian noise to mean of variational Gaussian posterior to aid training N(0,q_mu.var)
+        q_sqrt = 1.0 # cholesky of covariance of variational Gaussian posterior, will be multiplied by identity of correct shape
         q_diag = false # boolean, if true, approximate covariance by diagonal matrix
