--- a/examples/velocity_controlled_point_mass/keras_configs/scenario_7/train_dynamics/mode_opt_train_dynamics.yaml
+++ b/examples/velocity_controlled_point_mass/keras_configs/scenario_7/train_dynamics/mode_opt_train_dynamics.yaml
@@ -1,5 +1,4 @@
 scenario: 7
-
 mlflow:
   experiment_name: velocity_controlled_point_mass/scenario_${scenario}/mode_opt_train_dynamics
 
@@ -17,23 +16,20 @@ logging_epoch_freq: 100  # plot images every logging_epoch_freq epochs
 hydra:
   run:
     dir: velocity_controlled_point_mass/experiments/scenario_${scenario}/mode_opt_train_dynamics/${now:%Y.%m.%d}/${now:%H%M%S}
-  # job:
-  #   env_set:
-  #     MLFLOW_TRACKING_DIR: file://${hydra:runtime.cwd}/.mlflow
-  #     MLFLOW_TRACKING_URI: file://${hydra:runtime.cwd}/.mlflow
 
 mode_opt:
   class_name: ModeOpt
   config:
     start_state: [3.0, -1.0]
     target_state: [-3.0, 2.5]
-    env_name: velocity-controlled-point-mass/scenario-5
+    env_name: velocity-controlled-point-mass/scenario-7
     dataset: null
+    mode_controller: null
     desired_mode: 1
     mode_satisfaction_probability: 0.7
     learning_rate: 0.01
     epsilon: 1.0e-08
-    save_freq: 3000  # save model after every save_freq of batches
+    save_freq: 8000  # save model after every save_freq of batches
     log_dir: ./
     dynamics_fit_kwargs: # args to pass to keras model.fit(X, Y, callbacks, **dynamics_fit_kwargs)
       epochs: 1800
