--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ numpy = "^1.19.2"
 # tf-agents = "^0.6.0"
 # tensorflow = "^2.4"
 # jax = "^0.2.7"
-jax = "0.2.11" # hack until tensorflow-probability fixes custom_transforms error
+# jax = "0.2.11" # hack until tensorflow-probability fixes custom_transforms error
+jax = "^0.2.11"
 jaxlib = "^0.1.57"
 dm-env = "^1.3"
 gym = "^0.17.2"
@@ -23,8 +24,10 @@ bunch = "^1.0.1"
 jupyter = "^1.0.0"
 # gpjax = {path = "../GPJax", develop=true}
 # mogpjaxe = {path = "../MoGPJaxE", develop=true}
-tensorflow = "^2.5.0"
-tf-agents = "^0.8.0"
+tensorflow = "^2.0.0"
+# tensorflow = "^2.5.0"
+# tf-agents = "^0.8.0"
+tf-agents = ">=0.8.0" # used to be "^0.8.0"
 imageio = "^2.8.0"
 imageio-ffmpeg = "^0.4.2"
 
