--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,43 +1,36 @@
-[tool.poetry]
+[build-system]
+requires = ["setuptools", "setuptools-scm"]
+build-backend = "setuptools.build_meta"
+
+[project]
 name = "simenvs"
 version = "0.1.0"
-description = ""
-authors = ["Aidan Scannell <scannell.aidan@gmail.com>"]
+description = "A collection of (simple) multimodal simulation environments for reinforcement learning in TensorFlow."
+license = {text = "Apache-2.0"}
+readme = "README.md"
+requires-python = ">=3.7"
+dependencies = [
+    "numpy>=1.19.2",
+    # "matplotlib",
+    "jax>=0.2.11",
+    "jaxlib>=0.1.57",
+    "tf-agents>=0.8.0",
+]
+classifiers = [
+    "Programming Language :: Python :: 3",
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Information Technology",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: Apache Software License",
+    "Natural Language :: English",
+    "Programming Language :: Python :: 3",
+    "Topic :: Scientific/Engineering :: Artificial Intelligence",
+    "Topic :: Scientific/Engineering :: Information Analysis",
+]
 
-[tool.poetry.dependencies]
-# python = ">=3.6,<3.10"  
-# python = "^3.6"  
-python = "^3.8"
-matplotlib = "^3.2"
-numpy = "^1.19.2"
-# tf-agents = "^0.6.0"
-# tensorflow = "^2.4"
-# jax = "^0.2.7"
-# jax = "0.2.11" # hack until tensorflow-probability fixes custom_transforms error
-jax = "^0.2.11"
-jaxlib = "^0.1.57"
-dm-env = "^1.3"
-gym = "^0.17.2"
-# dm-haiku = "^0.0.3"
-opencv-python = "^4.5.1"
-bunch = "^1.0.1"
-jupyter = "^1.0.0"
-# gpjax = {path = "../GPJax", develop=true}
-# mogpjaxe = {path = "../MoGPJaxE", develop=true}
-# tensorflow = "^2.0.0"
-# tensorflow = "^2.5.0"
-# tf-agents = "^0.8.0"
-tf-agents = ">=0.8.0" # used to be "^0.8.0"
-imageio = "^2.8.0"
-imageio-ffmpeg = "^0.4.2"
+[project.optional-dependencies]
+dev = ["black", "pyright", "isort", "pyflakes"]
 
-[tool.poetry.dev-dependencies]
-black = "^20.8b1"
-isort = "^5.6.4"
-pyflakes = "^2.2.0"
-# Sphinx = "^3.3.1"
-# sphinx-rtd-theme = "^0.5.0"
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+[tool.setuptools]
+packages = ["simenvs"]
