--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,10 @@ keywords = ["mixtures-of-gaussian-process-experts", "gaussian-processes", "machi
 readme = "README.md"
 requires-python = ">=3.7"
 dependencies = [
-    "gpflow",
+    # "gpflow>=2.0.0",
+    # "gpflow",
+    # TODO update gpflow dependency once a release supports Apple silicon
+    "gpflow @ git+https://github.com/GPflow/GPflow@develop#egg=gpflow",
     "numpy",
     "matplotlib",
     "scikit-learn",  # for test_train_split
