commit before simplifying repo for paper

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,8 +37,8 @@ classifiers = [
 ]
 
 [project.optional-dependencies]
-dev = ["black", "python-language-server[all]", "isort", "pyflakes", "pytest"]
-examples = ["pandas", "jupyter", "hydra-core", "simenvs @ git+https://github.com/aidanscannell/simenvs#egg=simenvs"]
+dev = ["black", "pyright", "isort", "pyflakes", "pytest"]
+examples = ["pandas", "jupyter", "hydra-core", "simenvs @ git+https://github.com/aidanscannell/simenvs.git@v0.2.0#egg=simenvs"]
 
 [tool.setuptools]
 packages = ["moderl"]
