--- a/subtrees/mosvgpe/pyproject.toml
+++ b/subtrees/mosvgpe/pyproject.toml
@@ -15,8 +15,11 @@ keywords = ["mixtures-of-gaussian-process-experts", "gaussian-processes", "machi
 readme = "README.md"
 requires-python = ">=3.7"
 dependencies = [
-    # "gpflow>=2.0.0",
-    # "gpflow",
+    "tensorflow-probability",
+    "tensorflow>=2.4.0; platform_system!='Darwin' or platform_machine!='arm64'",
+    # NOTE: Support of Apple Silicon MacOS platforms is in an experimental mode
+    "tensorflow-macos>=2.4.0; platform_system=='Darwin' and platform_machine=='arm64'",
+
     # TODO update gpflow dependency once a release supports Apple silicon
     "gpflow @ git+https://github.com/GPflow/GPflow@develop#egg=gpflow",
     "numpy",
