--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,30 +2,29 @@
 requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
+
 [project]
-name = "ModeRL"
+name = "mosvgpe"
 version = "0.1.0"
-description = "Mode remaining exploration for model-based-reinforcement learning in TensorFlow/GPflow."
+description = "GPflow/Tensorflow implementation of mixture of Gaussian process experts - uses sparse GPs and stochastic variational inference"
+# author = "Aidan Scannell"
+# author_email = "scannell.aidan@gmail.com"
 license = {text = "Apache-2.0"}
-keywords = ["model-based reinforcement learning","mixtures-of-gaussian-process-experts", "gaussian-processes", "machine-learning", "variational-inference"]
+keywords = ["mixtures-of-gaussian-process-experts", "gaussian-processes", "machine-learning", "variational-inference", "mixture-models"]
+# repository = "https://github.com/aidanscannell/mogpe"
 readme = "README.md"
 requires-python = ">=3.7"
 dependencies = [
-    "gpflow",
+    # "gpflow>=2.0.0",
+    # "gpflow",
+    # TODO update gpflow dependency once a release supports Apple silicon
+    "gpflow @ git+https://github.com/GPflow/GPflow@develop#egg=gpflow",
     "numpy",
-    "tensorflow-probability",
-    "tensorflow>=2.4.0; platform_system!='Darwin' or platform_machine!='arm64'",
-    # NOTE: Support of Apple Silicon MacOS platforms is in an experimental mode
-    "tensorflow-macos>=2.4.0; platform_system=='Darwin' and platform_machine=='arm64'",
-    # "matplotlib",
+    "matplotlib",
+    # "scikit-learn",  # for test_train_split
+    'dataclasses; python_version<"3.6"',
     "tensor_annotations",
-    # "mosvgpe @ git+https://github.com/aidanscannell/mosvgpe#egg=mosvgpe",
-    # TODO make this agnostic of my file path...
-    "mosvgpe @ file:///Users/scannea1/python-projects/ModeRL/subtrees/mosvgpe",
-    # "mosvgpe @ file://./mosvgpe",
-    # "mosvgpe @ git+https://github.com/aidanscannell/mosvgpe#egg=mosvgpe",
-    # "geoflow @ git+https://github.com/aidanscannell/geoflow#egg=geoflow",
-    "wandb",
+    # "tensor_annotations_tensorflow_stubs",
 ]
 classifiers = [
     "Programming Language :: Python :: 3",
@@ -43,7 +42,8 @@ classifiers = [
 
 [project.optional-dependencies]
 dev = ["black", "pyright", "isort", "pyflakes", "pytest"]
-examples = ["pandas", "jupyter", "hydra-core", "simenvs @ git+https://github.com/aidanscannell/simenvs.git@v0.2.0#egg=simenvs"]
+# examples = ["pandas", "jupyter", "hydra-core"]
+examples = ["wandb"]
 
 [tool.setuptools]
-packages = ["moderl"]
+packages = ["mosvgpe"]
