--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,8 @@ dependencies = [
     "tensor_annotations",
     # "mosvgpe @ git+https://github.com/aidanscannell/mosvgpe#egg=mosvgpe",
     # TODO make this agnostic of my file path...
-    "mosvgpe @ file:///Users/scannea1/python-projects/ModeRL/subtrees/mosvgpe",
+    "mosvgpe @ file:///Users/scannea1/python-projects/ModeRL/mosvgpe",
+    # "mosvgpe @ file://./mosvgpe",
     # "mosvgpe @ file://./mosvgpe",
     # "mosvgpe @ git+https://github.com/aidanscannell/mosvgpe#egg=mosvgpe",
     # "geoflow @ git+https://github.com/aidanscannell/geoflow#egg=geoflow",
