--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     # "mosvgpe @ git+https://github.com/aidanscannell/mosvgpe#egg=mosvgpe",
     # TODO make this agnostic of my file path...
     "mosvgpe @ file:///Users/scannea1/python-projects/ModeRL/subtrees/mosvgpe",
+    "simenvs@ file:///Users/scannea1/python-projects/ModeRL/subtrees/simenvs",
     # "mosvgpe @ file://./mosvgpe",
     # "mosvgpe @ file://./mosvgpe",
     # "mosvgpe @ git+https://github.com/aidanscannell/mosvgpe#egg=mosvgpe",
@@ -44,7 +45,8 @@ classifiers = [
 
 [project.optional-dependencies]
 dev = ["black", "pyright", "isort", "pyflakes", "pytest"]
-examples = ["pandas", "jupyter", "hydra-core", "simenvs @ git+https://github.com/aidanscannell/simenvs.git@v0.2.0#egg=simenvs"]
+# examples = ["pandas", "jupyter", "hydra-core", "simenvs @ git+https://github.com/aidanscannell/simenvs.git@v0.2.0#egg=simenvs"]
+examples = ["pandas", "jupyter", "hydra-core"]
 
 [tool.setuptools]
 packages = ["moderl"]
