--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ dependencies = [
     # "mosvgpe @ git+https://github.com/aidanscannell/mosvgpe#egg=mosvgpe",
     # TODO make this agnostic of my file path...
     "mosvgpe @ file:///Users/scannea1/python-projects/ModeRL/subtrees/mosvgpe",
-    "simenvs@ file:///Users/scannea1/python-projects/ModeRL/subtrees/simenvs",
+    "simenvs @ file:///Users/scannea1/python-projects/ModeRL/subtrees/simenvs",
     # "mosvgpe @ file://./mosvgpe",
     # "mosvgpe @ file://./mosvgpe",
     # "mosvgpe @ git+https://github.com/aidanscannell/mosvgpe#egg=mosvgpe",
@@ -46,7 +46,8 @@ classifiers = [
 [project.optional-dependencies]
 dev = ["black", "pyright", "isort", "pyflakes", "pytest"]
 # examples = ["pandas", "jupyter", "hydra-core", "simenvs @ git+https://github.com/aidanscannell/simenvs.git@v0.2.0#egg=simenvs"]
-examples = ["pandas", "jupyter", "hydra-core"]
+examples = ["pandas", "jupyter", "hydra-core", "palettable"]
+experiments = ["pandas", "jupyter", "hydra-core", "palettable", "tikzplotlib"]
 
 [tool.setuptools]
-packages = ["moderl"]
+packages = ["moderl", "examples", "experiments"]
