update pyproject.toml for exmaples

--- a/subtrees/mosvgpe/pyproject.toml
+++ b/subtrees/mosvgpe/pyproject.toml
@@ -52,5 +52,6 @@ examples = ["wandb", "hydra-core"]
 
 [tool.setuptools.packages.find]
 # where = ["ex"]
-include = ["examples*", "mosvgpe"]  # alternatively: `exclude = ["additional*"]`
+# include = ["examples*", "mosvgpe"]  # alternatively: `exclude = ["additional*"]`
+include = ["examples", "mosvgpe"]  # alternatively: `exclude = ["additional*"]`
 # namespaces = false
