--- a/experiments/configs/cost_fn/target_control.yaml
+++ b/experiments/configs/cost_fn/target_control.yaml
@@ -1,15 +1,22 @@
-cost_fn:
-  _target_: moderl.cost_functions.Additive
-  first_part:
-    _target_: moderl.cost_functions.ControlQuadraticCostFunction
-    weight_matrix:
-      _target_: tensorflow.constant
-      value: [[1.0, 0.0], [0.0, 1.0]]
-      dtype: "float64"
-  second_part:
-    _target_: moderl.cost_functions.TargetStateCostFunction
-    weight_matrix:
-      _target_: tensorflow.constant
-      value: [[1.0, 0.0], [0.0, 1.0]]
-      dtype: "float64"
-    target_state: ${target_state}
+_target_: moderl.cost_functions.Additive
+first_part:
+  _target_: moderl.cost_functions.StateDiffCostFunction
+  weight_matrix:
+    _target_: tensorflow.constant
+    value: [[1.0, 0.0], [0.0, 1.0]]
+    dtype: "float64"
+  target_state: ${target_state}
+# first_part:
+#   _target_: moderl.cost_functions.TargetStateCostFunction
+#   weight_matrix:
+#     _target_: tensorflow.constant
+#     value: [[100.0, 0.0], [0.0, 100.0]]
+#     dtype: "float64"
+#   target_state: ${target_state}
+second_part:
+  _target_: moderl.cost_functions.ControlQuadraticCostFunction
+  weight_matrix:
+    _target_: tensorflow.constant
+    # value: [[1.0, 0.0], [0.0, 1.0]]
+    value: [[0.05, 0.0], [0.0, 0.05]]
+    dtype: "float64"
