moved state_diff cost to separate file

--- a/experiments/configs/main.yaml
+++ b/experiments/configs/main.yaml
@@ -1,6 +1,6 @@
 defaults:
   - initial_dataset: default
-  - cost_fn: target_control
+  - cost_fn: state_diff_control
   # disable logging by Hydra
   - override hydra/job_logging: none
   - override hydra/hydra_logging: none
