--- a/experiments/configs/main.yaml
+++ b/experiments/configs/main.yaml
@@ -149,7 +149,8 @@ dynamics:
               class_name: RBFSerializable
               config:
                 active_dims: [0, 1]
-                lengthscales: [1.0, 1.0]
+                lengthscales: [0.5, 0.5]
+                # lengthscales: [1.0, 1.0]
                 variance: 1.0
             inducing_variable:
               class_name: InducingPointsSerializable
