--- a/experiments/configs/main.yaml
+++ b/experiments/configs/main.yaml
@@ -8,8 +8,8 @@ defaults:
 
 wandb:
   entity: "aidanscannell"
-  project: "mode_remaining_exploration"
-  # project: "mode_remaining_exploration_for_mbrl"
+  # project: "mode_remaining_exploration"
+  project: "mode_remaining_exploration_for_mbrl"
   # log_artifacts: True
   # notes: ${run.comment}
   # name: fold_${run.fold}
@@ -23,7 +23,8 @@ hydra:
 random_seed: 42
 
 env:
-  name: "velocity-controlled-point-mass/scenario-7"
+  # name: "velocity-controlled-point-mass/scenario-7"
+  name: "velocity-controlled-point-mass/scenario-1"
   seed: 42
 
 # General model config
@@ -32,32 +33,46 @@ control_dim: 2
 state_control_input_dim: 4
 
 # Monitoring config
-logging_epoch_freq: 100
+logging_epoch_freq: 1000
+# logging_epoch_freq: 100
+
 num_episodes: 40
 
 # Traj opt config
 start_state:
   _target_: tensorflow.constant
-  value: [[-1.0, -2.0]]
+  value: [[0.0, -2.0]]
+  # value: [[1.0, -2.0]]
+  # value: [[2.0, -2.0]]
+  # value: [[-1.0, -2.0]]
   dtype: "float64"
 target_state:
   _target_: tensorflow.constant
   value: [[1.7, 3.0]]
   dtype: "float64"
 
-num_explorative_trajectories: 6
+# num_explorative_trajectories: 6
+num_explorative_trajectories: 1
+# num_explorative_trajectories: 4
+# num_explorative_trajectories: 2
 
 explorative_controller:
-  horizon: 10
+  horizon: 15
   max_iterations: 100
+  # explorative_objective_fn: "bald"
+  explorative_objective_fn: "joint_gating_function_entropy"
+  # explorative_objective_fn: "independent_gating_function_entropy"
+  # explorative_objective_fn: "none"
   mode_satisfaction_prob: 0.8
   # mode_satisfaction_prob: 0.7
-  exploration_weight: 10.0
+  # exploration_weight: 0.1
+  # exploration_weight: 10.0
+  exploration_weight: 0.5
   # exploration_weight: 1.0
   keep_last_solution: false
   # keep_last_solution: true
   control_lower_bound: -4.0
-  control_upper_bound: 4.0
+  control_upper_bound: 10.0
   method: "SLSQP"
 
 dynamics:
@@ -71,7 +86,7 @@ dynamics:
       batch_size: 118
       epochs: 20000
       verbose: true
-      validation_split: 0.2
+      validation_split: 0.0
     mosvgpe:
       class_name: MixtureOfSVGPExperts
       config:
